--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/bankapp
+spring.datasource.username=root
+spring.datasource.password=1234
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+
+api.prefix=/api/v1
