--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
 api.prefix=/api/v1
+
+server.port=9192
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=lephamphuongduy@gmail.com
+spring.mail.password=hwcggyrhuqbhbnfx
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
