--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ server.port=9192
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=lephamphuongduy@gmail.com
-spring.mail.password=hwcggyrhuqbhbnfx
+spring.mail.username=domspace777@gmail.com
+spring.mail.password=ldgdnpsawkqbvcsr
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
